--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,9 @@ html, body {
 h1, h2, h3 {
   font-family: 'Raleway', sans-serif;
 }
+  h1 {
+    margin-top: 0;
+  }
 
 .content {
   font-family: 'Roboto', sans-serif;
@@ -26,17 +29,18 @@ body > footer {
 }
 
 table#movies {
+  margin-top: 15px;
   width: 50%;
 }
   table#movies th {
     font-size: 1.6rem;
   }
     table#movies th:nth-child(1) {
-      width: 70%;
+      width: 60%;
     }
     table#movies th:nth-child(2),
     table#movies th:nth-child(3) {
-      width: 15%;
+      width: 20%;
     }
     table#movies th:nth-child(3),
     table#movies td[data-col="vote_count"] { 
@@ -58,3 +62,21 @@ table#movies {
     width: 75%;
   }
 
+#pagination {
+  margin-top: 20px;
+}
+  #pagination ul {
+    display: inline;
+    list-style-type: none;
+    margin: 0 0 0 10px;
+    padding: 0;
+  }
+  #pagination ul li {
+    border: 0;
+    display: inline;
+    margin-right: 10px;
+  }
+  #pagination ul li a.active {
+    border: 1px solid #000;
+    padding: 5px;
+  }
